fix typos, add webrec info

--- a/owt.html
+++ b/owt.html
@@ -174,7 +174,7 @@
                         <li class="fragment">Not general Internet emulation</li>
                         <li class="fragment">HTTP hasn't changed much since 1.0 release</li>
                         <li class="fragment">HTTP can route all traffic through a <i>Proxy Server</i></li>
-                        <li class="fragment">A<i>Proxy Server</i> can be used to serve archived content</li>
+                        <li class="fragment">A <i>Proxy Server</i> can be used to serve archived content</li>
                         <li class="fragment">Difficult to configure manually just to view an archive...</li>
                         <li class="fragment">...but easy if pre-configured in a "container"</li>
                      </ul>
@@ -392,7 +392,8 @@
                         <li class="fragment"><a href="https://webrecorder.io/">Webrecorder</a> is our main development focus</li>
                         <li class="fragment">Provides high fidelity Web Archiving for All</li>
                         <li class="fragment">User-driven, personalized archiving</li>
-                        <li class="fragment"><a target="_blank" href="http://new.webrecorder.io/anonymous/hans-reichel/record/ch_/http://daxo.de">Record and Browse with Containerized Browsers</a></li>
+                        <li class="fragment">Hosted service and free, open-source software</li>
+                        <li class="fragment">Sneak preview: <br/><a target="_blank" href="http://new.webrecorder.io/anonymous/hans-reichel/record/ch_/http://daxo.de">Record and Browse with Containerized Browsers</a></li>
                     </ul>
                 </section>
 
