--- a/owt.html
+++ b/owt.html
@@ -396,7 +396,7 @@
                         <li class="fragment">Sneak preview: Record and Replay with containerized browsers
                             <ul>
                                 <li><a target="_blank" href="https://webrecorder.io/record/http://www.elrancaguinodigital.cl/Main.php?MagID=1&MagNo=1600">Current Webrecorder</a></li>
-                                <li><a target="_blank" href="http://new.webrecorder.io/anonymous/Flash%20Demo/record/http://www.elrancaguinodigital.cl/Main.php?MagID=1&MagNo=1600">Containerized Browsers (Upcoming Release)</a></li>
+                                <li><a target="_blank" href="http://new.webrecorder.io/anonymous/Flash%20Demo/record/ch_/http://www.elrancaguinodigital.cl/Main.php?MagID=1&MagNo=1600">Containerized Browsers (Upcoming Release)</a></li>
                                 <!--<li><a target="_blank" href="http://new.webrecorder.io/anonymous/hans-reichel/record/ch_/http://daxo.de">Containerized Browsers (Upcoming Release)</a></li>-->
                             </ul>
                         </li>
