--- a/owt.html
+++ b/owt.html
@@ -393,7 +393,7 @@
                         <li class="fragment">Provides high fidelity Web Archiving for All</li>
                         <li class="fragment">User-driven, personalized archiving</li>
                         <li class="fragment">Hosted service and free, open-source software</li>
-                        <li class="fragment">Sneak preview: Record and Replay with containerized browsers
+                        <li class="fragment">Sneak preview: Record and Replay Flash with containerized browsers
                             <ul>
                                 <li><a target="_blank" href="https://webrecorder.io/record/http://www.elrancaguinodigital.cl/Main.php?MagID=1&MagNo=1600">Current Webrecorder</a></li>
                                 <li><a target="_blank" href="http://new.webrecorder.io/anonymous/Flash%20Demo/record/ch_/http://www.elrancaguinodigital.cl/Main.php?MagID=1&MagNo=1600">Containerized Browsers (Upcoming Release)</a></li>
