decrease list size on #8 rename protocol to notes

--- a/workshop.html
+++ b/workshop.html
@@ -114,7 +114,7 @@
                         <li>Conducting a small web archiving project with Webrecorder</li>
                         <li>Discussion</li>
                         <li>Optional: Survey</li> 
-                        <li>Protocol: <a href="https://goo.gl/TRB7Eg">goo.gl/TRB7Eg</a> (edit away!)</li>
+                        <li>Workshop Notes: <a href="https://goo.gl/TRB7Eg">goo.gl/TRB7Eg</a> (edit away!)</li>
                     </ul>
                 </section>
 
@@ -136,7 +136,7 @@
 
                 <section>
                     <p>In Web Archiving, archiving and access are typically thought about as two different things, represented by two software pieces: a <b>crawler</b> and an <b>access system</b>.</p>
-                    <ul>
+                    <ul style="font-size:80%">
                         <li class="fragment">Crawlers simulate a subset of the functionality of a real browser.</li>
                         <li class="fragment">Users expect an archive to reflect how the web looks for a user.</li>
                         <li class="fragment">No guarantee that crawled material will replay in access system.</li>
