--- a/warc.html
+++ b/warc.html
@@ -65,7 +65,7 @@
             <div class="slides">
                 <section>
                     <section>
-                        <h3>WARC Customization</h3>
+                        <h3>WARC Custom Practices</h3>
                         <p>Ilya Kreymer</p>
                         <p>
                             <img src="img/rhizome-logo-2.png" style="border:0; box-shadow:none;">
@@ -166,6 +166,14 @@ format: WARC File Format 1.0
                     <li class="fragment">Add empty gzip record with custom gzip flags</li>
                     <li class="fragment"><a target="_blank" href="https://github.com/ikreymer/warcsigner">warcsigner</a> experimental tool</li>
                     <li class="fragment">Signed WARC compatible with standard tools</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Other Custom Practices</h3>
+                <ul>
+                    <li class="fragment"><a target="_blank" href="http://wpull.readthedocs.org/en/master/warc.html">wpull extensions</a></li>
+                    <li class="fragment">Adopted the video metadata support</li>
+                    <li class="fragment">My question: How to proceed with standardizing or just documenting these approaches?</li>
                 </ul>
             </section>
             </div>
