move how to participate to be later, per masha's suggestion

--- a/workshop.html
+++ b/workshop.html
@@ -107,7 +107,7 @@
                 </section>
 
                 <section>
-                    <h2>Workshop</h2>
+                    <h2>Workshop Agenda</h2>
                     <ul>
                         <li>Introduce yourselves please :)</li>
                         <li>Primer on Webrecorder concepts and user interface</li>
@@ -120,14 +120,6 @@
 
                 <section>
                     <h2>How are you doing?</h2>
-                </section>
-
-                <section>
-                    <h2>How to participate</h2>
-                    <ul>
-                        <li><a href="https://new.webrecorder.io/" target="_blank">new.webrecorder.io</a></li>
-                        <li>Tested with Desktop versions of Google Chrome &amp; Firefox…</li>
-                    </ul>
                 </section>
 
                 <section>
@@ -179,6 +171,14 @@
                 <section>
                     <h3>Recordings and<br>“Worm’s Eye Perspective”</h3>
                     <p>Typically, in Web Archiving we use to think that a web resource is defined by <b>URL</b> and <b>time</b> of access. But that only represents one perspective, and often not a very relevant one. The focus for Webrecorder is preserving the <b>full context</b> visible to a web user.</p>
+                </section>
+
+                <section>
+                    <h2>How to participate</h2>
+                    <ul>
+                        <li><a href="https://new.webrecorder.io/" target="_blank">new.webrecorder.io</a></li>
+                        <li>Tested with Desktop versions of Google Chrome &amp; Firefox…</li>
+                    </ul>
                 </section>
 
                 <section>
