--- a/warc.html
+++ b/warc.html
@@ -136,6 +136,7 @@ Content-Length: 1114
                     <li class="fragment">Can generate metadata records for existing archives</li>
                     <li class="fragment">Need to map some id from containg page -&gt; video url</li>
                     <li class="fragment">Flexible format for specifying videos on a page</li>
+                    <li class="fragment"><a href="https://github.com/ikreymer/pywb/wiki/Video-Replay-and-Recording">More info</a></li>
                 </ul>
             </section>
             <section>
@@ -164,7 +165,7 @@ format: WARC File Format 1.0
                     <li class="fragment">Store DOM from the browser</li>
                     <li class="fragment">Supplemant tradition HTTP request/response records</li>
                     <li class="fragment">Can 'flatten' dynamic pages for analysis</li>
-                    <li class="fragment">All text is in one page</li>
+                    <li class="fragment">All text is in one page, easy to access</li>
                     <li class="fragment">One option: using resource record</li>
                     <pre class="fragment">
 WARC/1.0
