--- a/ipres2016.html
+++ b/ipres2016.html
@@ -72,7 +72,7 @@
                     <section>
                         <h1>Webrecorder</h1>
                         <h3>Symmetrical Archiving</h3>
-                        <p>Ilya Kreymer &amp; Dragan Espenschied</p>
+                        <p>Dragan Espenschied</p>
                         <p>
                             <img src="img/rhizome-logo-2.png" style="border:0; box-shadow:none;">
                         </p>
@@ -193,6 +193,11 @@
                 <section>
 					<h3>Containerized Browsers</h3>
 					<p>Using remote browsers from a software library for recording and replay at <b>highest possible fidelity</b>; additional automation available.</p>
+                </section>
+
+                <section>
+                    <h3>WARC upload</h3>
+                    <p>Uploaded WARC files are treated as sessions, bookmarks are detected automatically.</p>
                 </section>
 
                 <section>
