update wasapi presentation

--- a/wasapi-symposium-2017.html
+++ b/wasapi-symposium-2017.html
@@ -78,43 +78,43 @@
 
                 <section>
                     <h2>What is Webrecorder?</h2>
-                    <p class="fragment">Symmetrical Archiving</p>
-                    <p class="fragment">Same system for <b>recording</b> and <b>replay</b></p>
-                    <p class="fragment">High-fidelity, interactive, user-driven archiving</p>
-                    <p class="fragment">Open-Source, you can run your own instance</p>
-                    <p class="fragment"><a href="https://webrecorder.io/">Demo</a></p>
+                    <ul>
+                    <li class="fragment">Symmetrical Archiving</li>
+                    <li class="fragment">Same system for <b>recording</b> and <b>replay</b></li>
+                    <li class="fragment">High-fidelity, interactive, user-driven archiving</li>
+                    <li class="fragment"><a href="https://github.com/webrecorder/webrecorder">Open source</a> you can run your own instance</li>
+                    <li class="fragment">Enable Crowd Source Web Archiving?</li>
+                    </ul>
                 </section>
 
                 <section>
                     <h2>Recent Developments</h2>
-                    <p class="fragment">Curated Archives / Narrative Mode</p>
+                    <p class="fragment">Streamlied Replay UI<p>
+                    <p class="fragment"><a href="https://webrecorder.io/">Quick Demo</a></p>
+                    <p class="fragment"><a href="http://archive.rhizome.org/narrative-archives/">Currated / Narrative Archives</a></p>
                     <p class="fragment">Presented at <i>Digital Social Memory Conference</i><br/><a href="https://livestream.com/newmuseum/digitalsocialmemory/videos/148819198">(live stream)</a></p>
-                    <p class="fragment"><a href="http://archive.rhizome.org/narrative-archives/">Narrative Archives</a></p>
                 </section>
 
                 <section>
-                    <h2>Basic Interop: Import and Export Web Archives</h2>
-                    <p class="fragment">Download WARC files with metadata</p>
-                    <p class="fragment">Upload WARC (and ARC) files</p>
-                    <p class="fragment">Other formats needed?</p>
+                    <h2>Webrecorder APIs</h2>
+                    <ul>
+                    <li class="fragment">User download and upload of WARCs (and ARCs)</li>
+                    <li class="fragment">APIs for download and upload</li>
+                    <li class="fragment">APIs for collection management, metadata, bookmarks</li>
+                    <li class="fragment">Webrecorder comprised of distinct components</li>
+                    <li class="fragment">Working towards full REST API</li>
+                    </ul>
                 </section>
 
                 <section>
                     <h2>Interop: Archive Patching</h2>
-                    <p class="fragment"><b>Patch</b> or augment any existing web archive</p>
-                    <p class="fragment">Record <b>missing content only</b> from existing archives</p>
-                    <p class="fragment">Supports any <i>Memento API</i> or <i>CDX Server API</i> capable web archives</p>
-                    <p class="fragment">Download WARC of patched content</p>
-                    <p class="fragment"><a href="https://webrecorder.io/">Demo</a></p>
-                </section>
-
-                <section>
-                    <h2>Interop: Archive Extraction</h2>
-                    <p class="fragment"><b>Extract</b> browsed content from existing web archives.</p>
-                    <p class="fragment">Create new precise WARCs</p>
-                    <p class="fragment">Download WARC of extracted content</p>
-                    <p class="fragment">Brand new beta feature</p>
-                    <p class="fragment"><a href="https://webrecorder.io/">Demo</a></p>
+                    <ul>
+                    <li class="fragment"><b>Patch</b> or augment any existing web archive, per URL</li>
+                    <li class="fragment">Record <b>missing content</b> from existing archives</li>
+                    <li class="fragment">Supports any <i>Memento API</i> or <i>CDX Server API</i> capable web archives</li>
+                    <li class="fragment">Download WARC of patched content</li>
+                    <li class="fragment"><a href="https://webrecorder.io/demo">Demo</a></li>
+                    </ul>
                 </section>
 
                 <section>
@@ -128,12 +128,22 @@
                 </section>
 
                 <section>
+                    <h2>Interop: Archive Extraction</h2>
+                    <ul>
+                    <li class="fragment"><b>Extract</b> content from existing archives</li>
+                    <li class="fragment">Create new precise WARCs</li>
+                    <li class="fragment">Download WARC of extracted content</li>
+                    <li class="fragment"><a href="https://webrecorder.io/">Demo</a></li>
+                    </ul>
+                </section>
+
+                <section>
                     <h2>Interop: Offline Player</h2>
                     <ul>
                     <li class="fragment">Introducing <b>Webrecorder Player</b></li>
                     <li class="fragment">Standalone Desktop App</li>
                     <li class="fragment">View Webrecorder collections Locally</li>
-                    <li class="fragment">Use WASAPI to sync from remote Webrecorder</li>
+                    <li class="fragment">Could use <i>WASAPI</i> to sync from remote Webrecorder</li>
                     <li class="fragment">DEMO!</p>
                     </ul>
                 </section>
