minor tweaks wasapi

--- a/wasapi-symposium-2017.html
+++ b/wasapi-symposium-2017.html
@@ -83,7 +83,7 @@
                     <li class="fragment">Same system for <b>recording</b> and <b>replay</b></li>
                     <li class="fragment">High-fidelity, interactive, user-driven archiving</li>
                     <li class="fragment"><a href="https://github.com/webrecorder/webrecorder">Open source</a> you can run your own instance</li>
-                    <li class="fragment">Enable Crowd Source Web Archiving?</li>
+                    <li class="fragment">Goal: Contextual, Crowd Source Web Archiving</li>
                     </ul>
                 </section>
 
@@ -101,8 +101,8 @@
                     <li class="fragment">User download and upload of WARCs (and ARCs)</li>
                     <li class="fragment">APIs for download and upload</li>
                     <li class="fragment">APIs for collection management, metadata, bookmarks</li>
-                    <li class="fragment">Webrecorder comprised of distinct components</li>
-                    <li class="fragment">Working towards full REST API</li>
+                    <li class="fragment">Webrecorder comprised of distinct "micro-services"</li>
+                    <li class="fragment">Working towards comprehensive API</li>
                     </ul>
                 </section>
 
