--- a/wasapi-symposium-2017.html
+++ b/wasapi-symposium-2017.html
@@ -82,17 +82,17 @@
                     <li class="fragment">Symmetrical Archiving</li>
                     <li class="fragment">Same system for <b>recording</b> and <b>replay</b></li>
                     <li class="fragment">High-fidelity, interactive, user-driven archiving</li>
-                    <li class="fragment"><a href="https://github.com/webrecorder/webrecorder">Open source</a> you can run your own instance</li>
+                    <li class="fragment"><a href="https://github.com/webrecorder/webrecorder" target="_blank">Open source</a> you can run your own instance</li>
                     <li class="fragment">Goal: Contextual, Crowd Source Web Archiving</li>
                     </ul>
                 </section>
 
                 <section>
                     <h2>Recent Developments</h2>
-                    <p class="fragment">Streamlied Replay UI<p>
-                    <p class="fragment"><a href="https://webrecorder.io/">Quick Demo</a></p>
+                    <p class="fragment">Streamlined Replay UI<p>
+                    <p class="fragment"><a href="https://webrecorder.io/" target="_blank">Quick Demo</a></p>
                     <p class="fragment"><a href="http://archive.rhizome.org/narrative-archives/">Currated / Narrative Archives</a></p>
-                    <p class="fragment">Presented at <i>Digital Social Memory Conference</i><br/><a href="https://livestream.com/newmuseum/digitalsocialmemory/videos/148819198">(live stream)</a></p>
+                    <p class="fragment">Presented at <i>Digital Social Memory Conference</i><br/>@ New Museum, NY<a href="https://livestream.com/newmuseum/digitalsocialmemory/videos/148819198" target="_blank">(live stream)</a></p>
                 </section>
 
                 <section>
@@ -101,7 +101,7 @@
                     <li class="fragment">User download and upload of WARCs (and ARCs)</li>
                     <li class="fragment">APIs for download and upload</li>
                     <li class="fragment">APIs for collection management, metadata, bookmarks</li>
-                    <li class="fragment">Webrecorder comprised of distinct "micro-services"</li>
+                    <li class="fragment">Webrecorder comprised of distinct components</li>
                     <li class="fragment">Working towards comprehensive API</li>
                     </ul>
                 </section>
@@ -113,7 +113,7 @@
                     <li class="fragment">Record <b>missing content</b> from existing archives</li>
                     <li class="fragment">Supports any <i>Memento API</i> or <i>CDX Server API</i> capable web archives</li>
                     <li class="fragment">Download WARC of patched content</li>
-                    <li class="fragment"><a href="https://webrecorder.io/demo">Demo</a></li>
+                    <li class="fragment"><a href="https://webrecorder.io/demo" target="_blank">Demo</a></li>
                     </ul>
                 </section>
 
@@ -133,7 +133,7 @@
                     <li class="fragment"><b>Extract</b> content from existing archives</li>
                     <li class="fragment">Create new precise WARCs</li>
                     <li class="fragment">Download WARC of extracted content</li>
-                    <li class="fragment"><a href="https://webrecorder.io/">Demo</a></li>
+                    <li class="fragment"><a href="https://webrecorder.io/demo" target="_blank">Demo</a></li>
                     </ul>
                 </section>
 
@@ -155,7 +155,7 @@
                     <h4><a href="mailto:supportwebrecorder.io">Let us know</a> to try beta features</h4>
                     <br/>
                     <br/>
-                    <h4>Give us feedback! Fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSc7ccfiYFAleJ1YidCM8U9MxVoGvug8JB9C58DFnQJChEnJUA/viewform">Webrecorder User Survey</a></h4>
+                    <h4>Give us feedback! Fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSc7ccfiYFAleJ1YidCM8U9MxVoGvug8JB9C58DFnQJChEnJUA/viewform" target="_blank">Webrecorder User Survey</a></h4>
                     </ul>
                 <section>
             </div>
