--- a/wasapi-symposium-2017.html
+++ b/wasapi-symposium-2017.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Webrecorder Workshop</title>
+        <title>Webrecorder Interoperability</title>
 
         <meta name="description" content="Webrecorder Interoperability">
         <meta name="author" content="Ilya Kreymer, Mark Beasley">
