--- a/wasapi-symposium-2017.html
+++ b/wasapi-symposium-2017.html
@@ -79,6 +79,7 @@
                 <section>
                     <h2>What is Webrecorder?</h2>
                     <ul>
+                    <li class="fragment">Web Archiving Tool for Everyone!</li>
                     <li class="fragment">Symmetrical Archiving</li>
                     <li class="fragment">Same system for <b>recording</b> and <b>replay</b></li>
                     <li class="fragment">High-fidelity, interactive, user-driven archiving</li>
