--- a/convene.html
+++ b/convene.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Preservation of Networking Content: Webrecorder and Emulation</title>
+        <title>Preservation of Networked Content: Webrecorder and Emulation</title>
 
         <meta name="description" content="Webrecorder Interoperability">
         <meta name="author" content="Ilya Kreymer, Mark Beasley">
@@ -73,7 +73,7 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
                 <section>
-                    <h3>Preservation of Networking Content</h3>
+                    <h3>Preservation of Networked Content</h3>
                     <h4>Web Recording and Emulation</h4>
                     <p>Ilya Kreymer</p>
                     <p>
