add java example

--- a/convene.html
+++ b/convene.html
@@ -157,7 +157,8 @@
                         <li class="fragment">Introduced with <a href="http://oldweb.today/">oldweb.today</a></li>
                         <li class="fragment">Example: <a href="http://oldweb.today/nswin/20010330020339/http://www.leegte.org/works/online/composition_blue/index.htm">Scrollbar Composition</a></li>
                         <li class="fragment">Preserve Fixed Browser Environments</li>
-                        <li class="fragment">Example: <a href="http://browsers.oldweb.today/embed/netscape-4.8?url=http://art.teleportacia.org/exhibition/merry_christmas/bridging_the_digital_divide/">Java Applet</a></li>
+                        <li class="fragment">Example: <a href="http://webrecorder.io/$record/temp/java/$br:firefox:49/http://www.math.rutgers.edu/~sontag/336/brownian-applet.html">Java Applet</a></li>
+                        <li class="fragment">Another example: <a href="https://webrecorder.io/$record/temp/java/$br:firefox:49/http://archive.rhizome.org/artbase/1722/eicon.html">Every Icon</a></li>
                     </ul>
                 </section>
 
