fix typos, reword

--- a/security.html
+++ b/security.html
@@ -165,8 +165,8 @@
                     </ul>
                     <p class="concern fragment">Concern: Domain Cookies</p>
                     <ul>
-                        <li class="fragment">Domain wildcard *.example.com cookies?</li>
-                        <li class="fragment">Client-side created cookies"</li>
+                        <li class="fragment">Domain wildcard *.example.com cookies</li>
+                        <li class="fragment">Client-created cookies</li>
                     </ul>
                 </section>
                 <section>
